--- a/src/index.css
+++ b/src/index.css
@@ -414,10 +414,11 @@ body:not(.user-is-tabbing) a:focus {
     font-size: var(--font-size-normal);
 }
 
-.header__text {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+.header__text-box{
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    gap: 3rem
 }
 
 .header__text p {
@@ -429,27 +430,15 @@ body:not(.user-is-tabbing) a:focus {
 
 .header__portrait{
   width: 25rem;
-  position: absolute;
-  top: 36%;
-  left: 55%
 }
 
-@media(max-width: 1240px) {
-  .header__portrait{
-    top: 57%;
-    left: 35%}
-}
-
-@media(max-width: 800px) {
-  .header__portrait{
-    top: 54%;
-    left: 42%}
-}
 
 @media(max-width: 500px) {
-  .header__portrait{
-    top: 70%;
-    left: 20%}
+    .header__text-box{
+        flex-direction: column;
+        align-items: center;
+        gap: 5rem;
+    }
 }
 
 
@@ -521,6 +510,8 @@ body:not(.user-is-tabbing) a:focus {
 
 .work__image{
     width: 50rem;
+    border-radius: 1rem;
+    box-shadow: 0px 3px 10px rgba(255, 255, 255, 0.5);
 }
 
 .work__image-box {
