--- a/src/index.css
+++ b/src/index.css
@@ -508,11 +508,11 @@ body:not(.user-is-tabbing) a:focus {
     transform: scale(1.2);
 }
 
-.work__image{
+/* .work__image{
     width: 50rem;
     border-radius: 1rem;
     box-shadow: 0px 3px 10px rgba(255, 255, 255, 0.5);
-}
+} */
 
 .work__image-box {
     margin-bottom: var(--gutter-normal);
